[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/paused_menus/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/boingy_ding.wav" type="AudioStream" id=2]
[ext_resource path="res://ui/paused_menus/PausedOptionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/BackButtonFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/styles/PauseConfirmationHoverStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/styles/PauseConfirmationStyle.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/fonts/PauseConfirmFont.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.0196078, 0.172549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.831373, 0, 1 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="VisualElements" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="VisualElements"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.54902 )

[node name="MarginContainer" type="MarginContainer" parent="VisualElements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 400 )

[node name="ColorRect" type="ColorRect" parent="VisualElements/MarginContainer"]
margin_right = 800.0
margin_bottom = 500.0
color = Color( 0, 0.0196078, 0.172549, 0.588235 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VisualElements/MarginContainer"]
margin_right = 800.0
margin_bottom = 500.0

[node name="Buttons" type="VBoxContainer" parent="VisualElements/MarginContainer/AspectRatioContainer"]
margin_left = 150.0
margin_right = 650.0
margin_bottom = 500.0
alignment = 1

[node name="Resume" parent="VisualElements/MarginContainer/AspectRatioContainer/Buttons" instance=ExtResource( 3 )]
margin_top = 188.0
margin_right = 500.0
margin_bottom = 248.0

[node name="Quit" parent="VisualElements/MarginContainer/AspectRatioContainer/Buttons" instance=ExtResource( 3 )]
margin_top = 252.0
margin_right = 500.0
margin_bottom = 312.0
text = "Quit To Title"

[node name="ConfirmPanel" type="Panel" parent="VisualElements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VisualElements/ConfirmPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -42.0
margin_right = 235.0
margin_bottom = 42.0

[node name="SureLabel" type="Label" parent="VisualElements/ConfirmPanel/VBoxContainer"]
margin_right = 470.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 4 )
text = "Are you sure? All progress this run will be lost."

[node name="HBoxContainer" type="HBoxContainer" parent="VisualElements/ConfirmPanel/VBoxContainer"]
margin_top = 44.0
margin_right = 470.0
margin_bottom = 84.0
alignment = 1

[node name="Confirm" type="Button" parent="VisualElements/ConfirmPanel/VBoxContainer/HBoxContainer"]
margin_left = 146.0
margin_right = 221.0
margin_bottom = 40.0
rect_min_size = Vector2( 75, 40 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Confirm"

[node name="MarginContainer" type="MarginContainer" parent="VisualElements/ConfirmPanel/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 245.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )

[node name="Back" type="Button" parent="VisualElements/ConfirmPanel/VBoxContainer/HBoxContainer"]
margin_left = 249.0
margin_right = 324.0
margin_bottom = 40.0
rect_min_size = Vector2( 75, 40 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
text = "Back"

[node name="MenuOpened" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="VisualElements/MarginContainer/AspectRatioContainer/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VisualElements/MarginContainer/AspectRatioContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VisualElements/ConfirmPanel/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="VisualElements/ConfirmPanel/VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
